--- a/about.html
+++ b/about.html
@@ -17,8 +17,9 @@
     <div class="article-title-section article-section">
         <h2>
             About MGM's Hustlers
-            <i class="fa-solid fa-square-2"></i>
+            <!-- <i class="fa-solid fa-2"></i> -->
         </h2>
+        <hr />
         <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
 
     </div>
