--- a/index.html
+++ b/index.html
@@ -26,29 +26,28 @@
     </div>
     <div id="nav-mobile-section">
         <div id="nav-link-section" class="nav-section">
-            <a href="https://piyush-mahajan.netlify.app/"><strong>Piyush Mahajan
+            <a href="https://piyush-mahajan.netlify.app/"><strong id="strong-text"><h4>Piyush</h4><h5>Mahajan</h5>
                 </strong>
             </a>
-            <a href="#"><strong>
-                    Monson Vergesse
+            <a href="#"><strong id="strong-text">
+                    <h4>Monson</h4><h5>Verghese</h5>
                 </strong>
             </a>
         </div>
         <div id="nav-social-section" class="nav-section">
             <a href="#">
-                <i class="fa-brands fa-twitter"></i>
+                <!-- <i class="fa-brands fa-twitter"></i> -->
                 <!-- <i class="fa-duotone fa-square-2"></i> -->
-
+                <i class="fa-solid fa-2 year-style">nd</i>
             </a>
             <a href="" target="_blank">
                 <!-- <i class="fa-brands fa-youtube"></i> -->
                 <!-- <i class="fa-solid fa-square-3"></i> -->
-
-
+                <i class="fa-solid fa-3 year-style">rd</i>
             </a>
             <a href="#">
                 <!-- <i class="fa-brands fa-codepen"></i> -->
-                <i class="fa-solid fa-square-4"></i>
+                <i class="fa-solid fa-4 year-style">th</i>
             </a>
         </div>
         <div id="nav-contact-section" class="nav-section">
@@ -93,7 +92,7 @@
             </button>
         </div>
     </article>
-    <!-- second perosn -->
+    <!-- second person -->
     <article data-index="1" data-status="inactive">
         <div class="article-image-section article-section"></div>
         <div class="article-description-section article-section">
