--- a/about.html
+++ b/about.html
@@ -21,10 +21,19 @@
         </h2>
         <hr />
         <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
-
+        <section class="about-body">
+            <div class="img">
+                
+            </div>
+            <div class="about-section-text">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, placeat accusantium iure, error pariatur tenetur perferendis doloremque animi blanditiis numquam nostrum sequi quia dignissimos debitis dolor voluptatibus voluptatem et, distinctio ab! Quod, nostrum. Labore quidem saepe vel culpa a magni, enim reprehenderit architecto, repellat quia odio fugit maxime hic earum corporis sunt error in ipsa dolore mollitia libero et ducimus? Iste quibusdam ratione nulla voluptas quas suscipit facilis eos inventore nihil ducimus, est nemo enim libero, nam doloribus, culpa rerum provident. Dolor, labore voluptates! Ipsam aliquam esse error voluptatibus quod autem aut est, dicta alias officiis fugit excepturi quia dolor?
+                </p>
+            </div>
+        </section>
+        <button class="button-28" role="button">How To Contribute ?</button>
     </div>
     <script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-
 </html>
