--- a/about.html
+++ b/about.html
@@ -14,11 +14,21 @@
 </head>
 
 <body>
-    <div class="article-title-section article-section">
-        <h2>
-            About MGM's Hustlers
-            <!-- <i class="fa-solid fa-2"></i> -->
-        </h2>
+    <div class=" article-section">
+        <div class="article-title-section">
+            <div class="">
+                <a href="index.html">
+                    <i class="fa-solid fa-house"></i>
+                </a>
+            </div>
+            <h2>
+                About MGM's Hustlers
+                <!-- <i class="fa-solid fa-2"></i> -->
+            </h2>
+            <div class="">
+
+            </div>
+        </div>
         <hr />
         <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
         <section class="about-body">
