--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="second.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Rubik&display=swap"
         rel="stylesheet">
     <title>MGM's Hustlers</title>
@@ -27,23 +27,25 @@
             <a href="https://piyush-mahajan.netlify.app/"><strong id="strong-text"><h4>Piyush</h4><h5>Mahajan</h5>
                 </strong>
             </a>
-            <a href="#"><strong id="strong-text">
+            <a href="https://monson2002.github.io/Personal-Portfolio/"><strong id="strong-text">
                     <h4>Monson</h4><h5>Verghese</h5>
                 </strong>
             </a>
         </div>
         <div id="nav-social-section" class="nav-section">
-            <a href="#">
+            <a href="#" class="underline">
                 <!-- <i class="fa-brands fa-twitter"></i> -->
                 <!-- <i class="fa-duotone fa-square-2"></i> -->
                 <i class="fa-solid fa-2 year-style">nd</i>
+                <!-- <i class="fa-solid fa-grip-lines"></i> -->
+                <i class="fa-solid fa-minus"></i>
             </a>
-            <a href="" target="_blank">
+            <a href="third.html" target="_blank">
                 <!-- <i class="fa-brands fa-youtube"></i> -->
                 <!-- <i class="fa-solid fa-square-3"></i> -->
                 <i class="fa-solid fa-3 year-style">rd</i>
             </a>
-            <a href="#">
+            <a href="fourth.html">
                 <!-- <i class="fa-brands fa-codepen"></i> -->
                 <i class="fa-solid fa-4 year-style">th</i>
             </a>
