--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class=" article-section">
         <div class="article-title-section">
             <div class="">
-                <a href="index.html">
+                <a href="second.html">
                     <i class="fa-solid fa-house"></i>
                 </a>
             </div>
@@ -41,7 +41,9 @@
                 </p>
             </div>
         </section>
-        <button class="button-28" role="button">How To Contribute ?</button>
+        <div class="button-div">
+            <button class="button-28" role="button">How To Contribute ?</button>
+        </div>
     </div>
     <script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
