20-12-22 Removed target='_blank'

--- a/fourth.html
+++ b/fourth.html
@@ -33,12 +33,12 @@
             </a>
         </div>
         <div id="nav-social-section" class="nav-section">
-            <a href="second.html" target="_blank">
+            <a href="second.html">
                 <!-- <i class="fa-brands fa-twitter"></i> -->
                 <!-- <i class="fa-duotone fa-square-2"></i> -->
                 <i class="fa-solid fa-2 year-style">nd</i>
             </a>
-            <a href="third.html" target="_blank">
+            <a href="third.html">
                 <!-- <i class="fa-brands fa-youtube"></i> -->
                 <!-- <i class="fa-solid fa-square-3"></i> -->
                 <i class="fa-solid fa-3 year-style">rd</i>
