--- a/second.html
+++ b/second.html
@@ -40,7 +40,7 @@
                 <!-- <i class="fa-solid fa-grip-lines"></i> -->
                 <i class="fa-solid fa-minus"></i>
             </a>
-            <a href="third.html" target="_blank">
+            <a href="third.html">
                 <!-- <i class="fa-brands fa-youtube"></i> -->
                 <!-- <i class="fa-solid fa-square-3"></i> -->
                 <i class="fa-solid fa-3 year-style">rd</i>
