21-12-22 8:39pm preloader added

--- a/third.html
+++ b/third.html
@@ -15,165 +15,174 @@
 
 <body>
 
-<nav data-toggled="false" data-transitionable="false">
-    <div id="nav-logo-section" class="nav-section">
-        <a href="#">
-            <i class="fa-solid fa-fire"> MGM's Hustlers</i>
-            <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
-        </a>
-    </div>
-    <div id="nav-mobile-section">
-        <div id="nav-link-section" class="nav-section">
-            <a href="https://piyush-mahajan.netlify.app/"><strong id="strong-text"><h4>Piyush</h4><h5>Mahajan</h5>
-                </strong>
-            </a>
-            <a href="https://monson2002.github.io/Personal-Portfolio/"><strong id="strong-text">
-                    <h4>Monson</h4><h5>Verghese</h5>
-                </strong>
+    <nav data-toggled="false" data-transitionable="false">
+        <div id="nav-logo-section" class="nav-section">
+            <a href="#">
+                <i class="fa-solid fa-fire"> MGM's Hustlers</i>
+                <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
             </a>
         </div>
-        <div id="nav-social-section" class="nav-section">
-            <a href="second.html">
-                <!-- <i class="fa-brands fa-twitter"></i> -->
-                <!-- <i class="fa-duotone fa-square-2"></i> -->
-                <i class="fa-solid fa-2 year-style">nd</i>
-            </a>
-            <a href="#" class="underline">
-                <!-- <i class="fa-brands fa-youtube"></i> -->
-                <!-- <i class="fa-solid fa-square-3"></i> -->
-                <i class="fa-solid fa-3 year-style">rd</i>
-                <!-- <i class="fa-solid fa-grip-lines"></i> -->
-                <i class="fa-solid fa-minus"></i>
-            </a>
-            <a href="fourth.html">
-                <!-- <i class="fa-brands fa-codepen"></i> -->
-                <i class="fa-solid fa-4 year-style">th</i>
-            </a>
+        <div id="nav-mobile-section">
+            <div id="nav-link-section" class="nav-section">
+                <a href="https://piyush-mahajan.netlify.app/"><strong id="strong-text">
+                        <h4>Piyush</h4>
+                        <h5>Mahajan</h5>
+                    </strong>
+                </a>
+                <a href="https://monson2002.github.io/Personal-Portfolio/"><strong id="strong-text">
+                        <h4>Monson</h4>
+                        <h5>Verghese</h5>
+                    </strong>
+                </a>
+            </div>
+            <div id="nav-social-section" class="nav-section">
+                <a href="second.html">
+                    <!-- <i class="fa-brands fa-twitter"></i> -->
+                    <!-- <i class="fa-duotone fa-square-2"></i> -->
+                    <i class="fa-solid fa-2 year-style">nd</i>
+                </a>
+                <a href="#" class="underline">
+                    <!-- <i class="fa-brands fa-youtube"></i> -->
+                    <!-- <i class="fa-solid fa-square-3"></i> -->
+                    <i class="fa-solid fa-3 year-style">rd</i>
+                    <!-- <i class="fa-solid fa-grip-lines"></i> -->
+                    <i class="fa-solid fa-minus"></i>
+                </a>
+                <a href="fourth.html">
+                    <!-- <i class="fa-brands fa-codepen"></i> -->
+                    <i class="fa-solid fa-4 year-style">th</i>
+                </a>
+            </div>
+            <div id="nav-contact-section" class="nav-section">
+                <a href="/about.html">ABOUT US</a>
+            </div>
         </div>
-        <div id="nav-contact-section" class="nav-section">
-            <a href="/about.html">ABOUT US</a>
-        </div>
-    </div>
-    <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
-        <span>Menu</span>
-        <i class="fa-solid fa-bars"></i>
-    </button>
-</nav>
+        <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
+            <span>Menu</span>
+            <i class="fa-solid fa-bars"></i>
+        </button>
+    </nav>
 
-<main>
-    <!-- first person -->
-    <article data-index="0" data-status="active">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-            <p>Year: THIRD</p>
-            <br><br>
-            <p> Python | Java | JavsScript | Tailwind | HTML | Github <br><br></p>
-            <p class="">
+    <main>
+        <!-- first person -->
+        <article data-index="0" data-status="active">
+            <div class="article-image-section article-section"></div>
+            <div class="article-description-section article-section">
+                <p>Year: THIRD</p>
+                <br><br>
+                <p> Python | Java | JavsScript | Tailwind CSS | HTML | Github <br><br></p>
+                <p class="">
 
-                Hi, MONSON here.... I am an aspiring web-developer currently studying Computer Science. I believe my knack for trying new things will help me moving forward.You can connect with me on linkedin and do check out my portfolio.
-            </p>
-        </div>
-        <div class="article-title-section article-section">
-            <h2>Monson Reji Verghese</h2>
-            <!-- <i class="fa-brands fa-instagram"></i> -->
-            <i class="fa-brands fa-github"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-solid fa-user"></i>
-        </div>
-        <div class="article-nav-section article-section">
-            <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                <i class="fa-solid fa-left-long"></i>
-            </button>
-            <button class="article-nav-button" type="button" onclick="handleRightClick()">
-                <i class="fa-solid fa-right-long"></i>
-            </button>
-        </div>
-    </article>
-    <!-- second person -->
-    <article data-index="1" data-status="inactive">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-            <p>A place where books hang out waiting to be grabbed. But don't be too grabby now, ya hear.</p>
-        </div>
-        <div class="article-title-section article-section">
-            <h2>Wicked Cool Library Shelves</h2>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-solid fa-user"></i>
-        </div>
-        <div class="article-nav-section article-section">
-            <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                <i class="fa-solid fa-left-long"></i>
-            </button>
-            <button class="article-nav-button" type="button" onclick="handleRightClick()">
-                <i class="fa-solid fa-right-long"></i>
-            </button>
-        </div>
-    </article>
-    <!-- third person -->
-    <article data-index="2" data-status="inactive">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-            <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of the
-                outside.</p>
-        </div>
-        <div class="article-title-section article-section">
-            <h2>Neato Toledo Lighthouse</h2>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
-        <div class="article-nav-section article-section">
-            <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                <i class="fa-solid fa-left-long"></i>
-            </button>
-            <button class="article-nav-button" type="button" onclick="handleRightClick()">
-                <i class="fa-solid fa-right-long"></i>
-            </button>
-        </div>
-    </article>
-    <!-- third person -->
-    <article data-index="3" data-status="inactive">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-            <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of the
-                outside.</p>
-        </div>
-        <div class="article-title-section article-section">
-            <h2>Neato Toledo Lighthouse</h2>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
-        <div class="article-nav-section article-section">
-            <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                <i class="fa-solid fa-left-long"></i>
-            </button>
-            <button class="article-nav-button" type="button" onclick="handleRightClick()">
-                <i class="fa-solid fa-right-long"></i>
-            </button>
-        </div>
-    </article>
-    <!-- four person -->
-    <article data-index="4" data-status="inactive">
-        <div class="article-image-section article-section"></div>
-        <div class="article-description-section article-section">
-            <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of the
-                outside.</p>
-        </div>
-        <div class="article-title-section article-section">
-            <h2>Neato Toledo Lighthouse</h2>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
-        <div class="article-nav-section article-section">
-            <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                <i class="fa-solid fa-left-long"></i>
-            </button>
-            <button class="article-nav-button" type="button" onclick="handleRightClick()">
-                <i class="fa-solid fa-right-long"></i>
-            </button>
-        </div>
-    </article>
+                    Hi, MONSON here.... I am an aspiring web-developer currently studying Computer Science. I believe my
+                    knack for trying new things will help me moving forward.You can connect with me on linkedin and do
+                    check out my portfolio.
+                </p>
+            </div>
+            <div class="article-title-section article-section">
+                <h2>Monson Reji Verghese</h2>
+                <!-- <i class="fa-brands fa-instagram"></i> -->
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-solid fa-user"></i>
+            </div>
+            <div class="article-nav-section article-section">
+                <button class="article-nav-button" type="button" onclick="handleLeftClick()">
+                    <i class="fa-solid fa-left-long"></i>
+                </button>
+                <button class="article-nav-button" type="button" onclick="handleRightClick()">
+                    <i class="fa-solid fa-right-long"></i>
+                </button>
+            </div>
+        </article>
+        <!-- second person -->
+        <article data-index="1" data-status="inactive">
+            <div class="article-image-section article-section"></div>
+            <div class="article-description-section article-section">
+                <p>A place where books hang out waiting to be grabbed. But don't be too grabby now, ya hear.</p>
+            </div>
+            <div class="article-title-section article-section">
+                <h2>Wicked Cool Library Shelves</h2>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-solid fa-user"></i>
+            </div>
+            <div class="article-nav-section article-section">
+                <button class="article-nav-button" type="button" onclick="handleLeftClick()">
+                    <i class="fa-solid fa-left-long"></i>
+                </button>
+                <button class="article-nav-button" type="button" onclick="handleRightClick()">
+                    <i class="fa-solid fa-right-long"></i>
+                </button>
+            </div>
+        </article>
+        <!-- third person -->
+        <article data-index="2" data-status="inactive">
+            <div class="article-image-section article-section"></div>
+            <div class="article-description-section article-section">
+                <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of
+                    the
+                    outside.</p>
+            </div>
+            <div class="article-title-section article-section">
+                <h2>Neato Toledo Lighthouse</h2>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="article-nav-section article-section">
+                <button class="article-nav-button" type="button" onclick="handleLeftClick()">
+                    <i class="fa-solid fa-left-long"></i>
+                </button>
+                <button class="article-nav-button" type="button" onclick="handleRightClick()">
+                    <i class="fa-solid fa-right-long"></i>
+                </button>
+            </div>
+        </article>
+        <!-- third person -->
+        <article data-index="3" data-status="inactive">
+            <div class="article-image-section article-section"></div>
+            <div class="article-description-section article-section">
+                <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of
+                    the
+                    outside.</p>
+            </div>
+            <div class="article-title-section article-section">
+                <h2>Neato Toledo Lighthouse</h2>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="article-nav-section article-section">
+                <button class="article-nav-button" type="button" onclick="handleLeftClick()">
+                    <i class="fa-solid fa-left-long"></i>
+                </button>
+                <button class="article-nav-button" type="button" onclick="handleRightClick()">
+                    <i class="fa-solid fa-right-long"></i>
+                </button>
+            </div>
+        </article>
+        <!-- four person -->
+        <article data-index="4" data-status="inactive">
+            <div class="article-image-section article-section"></div>
+            <div class="article-description-section article-section">
+                <p>The neatest lighthouse you ever saw. Ehh, actually it's kind of messy. But that's why the pic is of
+                    the
+                    outside.</p>
+            </div>
+            <div class="article-title-section article-section">
+                <h2>Neato Toledo Lighthouse</h2>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="article-nav-section article-section">
+                <button class="article-nav-button" type="button" onclick="handleLeftClick()">
+                    <i class="fa-solid fa-left-long"></i>
+                </button>
+                <button class="article-nav-button" type="button" onclick="handleRightClick()">
+                    <i class="fa-solid fa-right-long"></i>
+                </button>
+            </div>
+        </article>
 
-</main>
+    </main>
 
-<script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
-<script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
