22-12-22 9:31pm Added links to social media handles (template)

--- a/second.html
+++ b/second.html
@@ -82,7 +82,6 @@
         <article data-index="0" data-status="active">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Year: SECOND</p>
                 <br><br>
                 <p> React.js | Next.js | Java | C++ | Tailwind.CSS | MongoDB | Node.js | Spline3D | Figma | PhotoShop
                     |<br><br></p>
@@ -97,9 +96,9 @@
             <div class="article-title-section article-section">
                 <h2>Piyush Mahajan</h2>
                 <!-- <i class="fa-brands fa-instagram"></i> -->
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -118,9 +117,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Wicked Cool Library Shelves</h2>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -141,7 +140,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -162,7 +163,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -183,7 +186,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
