--- a/third.html
+++ b/third.html
@@ -68,7 +68,6 @@
         <article data-index="0" data-status="active">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Year: THIRD</p>
                 <br><br>
                 <p> Python | Java | JavsScript | Tailwind CSS | HTML | Github <br><br></p>
                 <p class="">
@@ -81,9 +80,9 @@
             <div class="article-title-section article-section">
                 <h2>Monson Reji Verghese</h2>
                 <!-- <i class="fa-brands fa-instagram"></i> -->
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="https://github.com/Monson2002"></a>
+                <a class="a-class fa-brands fa-linkedin" href="https://www.linkedin.com/in/monson-reji-verghese-a26061231/"></a>
+                <a class="a-class fa-solid fa-user" href="https://monson2002.github.io/Personal-Portfolio/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -102,9 +101,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Wicked Cool Library Shelves</h2>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -125,7 +124,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -136,7 +137,7 @@
                 </button>
             </div>
         </article>
-        <!-- third person -->
+        <!-- fourth person -->
         <article data-index="3" data-status="inactive">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
@@ -146,7 +147,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -157,7 +160,7 @@
                 </button>
             </div>
         </article>
-        <!-- four person -->
+        <!-- fifth person -->
         <article data-index="4" data-status="inactive">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
@@ -167,7 +170,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
