--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div class="article-title-section">
             <div class="">
                 <a href="second.html">
-                    <i class="fa-solid fa-house"></i>
+                    <i class="fa-solid fa-left-long"></i>
                 </a>
             </div>
             <h2>
