--- a/fourth.html
+++ b/fourth.html
@@ -68,7 +68,6 @@
         <article data-index="0" data-status="active">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Year: FOURTH</p>
                 <br><br>
                 <p> React.js | Next.js | Java | C++ | Tailwind.CSS | MongoDB | Node.js | Spline3D | Figma | PhotoShop
                     |<br><br></p>
@@ -83,9 +82,9 @@
             <div class="article-title-section article-section">
                 <h2>Piyush Mahajan</h2>
                 <!-- <i class="fa-brands fa-instagram"></i> -->
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -104,9 +103,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Wicked Cool Library Shelves</h2>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-solid fa-user"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -127,7 +126,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -148,7 +149,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -169,11 +172,13 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Neato Toledo Lighthouse</h2>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="a-class fa-brands fa-github" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                    <i class="fa-solid fa-left-long"></i>
+                    
                 </button>
                 <button class="article-nav-button" type="button" onclick="handleRightClick()">
                     <i class="fa-solid fa-right-long"></i>
