--- a/second.html
+++ b/second.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div id="nav-contact-section" class="nav-section">
-                <a href="/about.html">ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
             </div>
         </div>
         <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
@@ -96,9 +96,10 @@
             <div class="article-title-section article-section">
                 <h2>Piyush Mahajan</h2>
                 <!-- <i class="fa-brands fa-instagram"></i> -->
-                <a class="a-class fa-brands fa-github" href="/"></a>
-                <a class="a-class fa-brands fa-linkedin" href="/"></a>
-                <a class="a-class fa-solid fa-user" href="/"></a>
+                <a class="a-class fa-brands fa-github" href="https://github.com/piyush-mahajan"></a>
+                <a class="a-class fa-brands fa-linkedin"
+                    href="https://www.linkedin.com/in/piyush-mahajan-146860229/"></a>
+                <a class="a-class fa-solid fa-user" href="https://piyush-mahajan.netlify.app"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -113,7 +114,9 @@
         <article data-index="1" data-status="inactive">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>A place where books hang out waiting to be grabbed. But don't be too grabby now, ya hear.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
+                    distinctio quod ipsam magnam! Reprehenderit quis temporibus repellendus facilis ullam aut magni
+                    inventore perferendis sit, facere neque minus.</p>
             </div>
             <div class="article-title-section article-section">
                 <h2>Wicked Cool Library Shelves</h2>
@@ -205,7 +208,7 @@
     <script>
         var loader = document.querySelector(".preloader");
 
-        window.addEventListener("load", function() {
+        window.addEventListener("load", function () {
             loader.classList.add("preloader-disappear");
         });
     </script>
