--- a/third.html
+++ b/third.html
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div id="nav-contact-section" class="nav-section">
-                <a href="/about.html">ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
             </div>
         </div>
         <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
