--- a/fourth.html
+++ b/fourth.html
@@ -54,7 +54,7 @@
                 </a>
             </div>
             <div id="nav-contact-section" class="nav-section">
-                <a href="/about.html">ABOUT US</a>
+                <a href="about.html">ABOUT US</a>
             </div>
         </div>
         <button id="nav-toggle-button" type="button" onclick="handleNavToggle()">
@@ -178,7 +178,7 @@
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
-                    
+
                 </button>
                 <button class="article-nav-button" type="button" onclick="handleRightClick()">
                     <i class="fa-solid fa-right-long"></i>
