31-12-22 11:02pm Changed about page

--- a/about.html
+++ b/about.html
@@ -37,7 +37,13 @@
             </div>
             <div class="about-section-text">
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, placeat accusantium iure, error pariatur tenetur perferendis doloremque animi blanditiis numquam nostrum sequi quia dignissimos debitis dolor voluptatibus voluptatem et, distinctio ab! Quod, nostrum. Labore quidem saepe vel culpa a magni, enim reprehenderit architecto, repellat quia odio fugit maxime hic earum corporis sunt error in ipsa dolore mollitia libero et ducimus? Iste quibusdam ratione nulla voluptas quas suscipit facilis eos inventore nihil ducimus, est nemo enim libero, nam doloribus, culpa rerum provident. Dolor, labore voluptates! Ipsam aliquam esse error voluptatibus quod autem aut est, dicta alias officiis fugit excepturi quia dolor?
+                    We are a bunch of MGMites building stuff to try to improve the technical abilities of our fellow mates.
+
+                    <h1>Vision</h1>
+                    To provide a one stop solution for students to showcase their profile - on our own personal social website. 
+
+                    <h1>Mission</h1>
+                    To help students develop thair development skills and learn about contributing in open source.
                 </p>
             </div>
         </section>
