--- a/second.html
+++ b/second.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="second.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Rubik&display=swap"
         rel="stylesheet">
+
     <title>MGM's Hustlers</title>
-
+    <!-- <link rel="shortcut icon" type="image/ico" href="/favicon_io (3)/favicon.ico" /> -->
+    <link rel="shortcut icon" href="/favicon_io (3)/favicon.ico" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
