--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Rubik&display=swap"
         rel="stylesheet">
     <title>About MGM's Hustlers</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
 </head>
 
 <body>
