--- a/second.html
+++ b/second.html
@@ -12,8 +12,7 @@
         rel="stylesheet">
 
     <title>MGM's Hustlers</title>
-    <!-- <link rel="shortcut icon" type="image/ico" href="/favicon_io (3)/favicon.ico" /> -->
-    <link rel="shortcut icon" href="/favicon_io (3)/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/6b9d446c89.js" crossorigin="anonymous"></script>
 </head>
 
