--- a/second.html
+++ b/second.html
@@ -24,7 +24,7 @@
                 <i class="fa-solid">Welcome to</i>
             </div>
             <div>
-                <i class="fa-solid fa-fire"> Hustlers' family</i>
+                <i class="fa-solid fa-fire"> Hustler's family</i>
             </div>
         </h1>
     </div>
