1-1-23 8:30 corrected spelling of JS

--- a/third.html
+++ b/third.html
@@ -71,7 +71,7 @@
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <br><br>
-                <p> Python | Java | JavsScript | Tailwind CSS | HTML | Github <br><br></p>
+                <p> Python | Java | JavaScript | Tailwind CSS | HTML | Github <br><br></p>
                 <p class="">
 
                     Hi, MONSON here.... I am an aspiring web-developer currently studying Computer Science. I believe my
