--- a/third.html
+++ b/third.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div id="nav-social-section" class="nav-section">
-                <a href="second.html">
+                <a href="index.html">
                     <!-- <i class="fa-brands fa-twitter"></i> -->
                     <!-- <i class="fa-duotone fa-square-2"></i> -->
                     <i class="fa-solid fa-2 year-style">nd</i>
