--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <div class=" article-section">
         <div class="article-title-section">
             <div class="">
-                <a href="second.html">
+                <a href="index.html">
                     <i class="fa-solid fa-left-long"></i>
                 </a>
             </div>
