1-1-23 10:51am Fixed the responsiveness on mobile screen

--- a/fourth.html
+++ b/fourth.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div id="nav-social-section" class="nav-section">
-                <a href="second.html">
+                <a href="index.html">
                     <!-- <i class="fa-brands fa-twitter"></i> -->
                     <!-- <i class="fa-duotone fa-square-2"></i> -->
                     <i class="fa-solid fa-2 year-style">nd</i>
@@ -67,7 +67,7 @@
 
     <main>
         <!-- first person -->
-        <article data-index="0" data-status="active">
+        <article data-index="0" data-status="active" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
@@ -91,7 +91,7 @@
             </div>
         </article>
         <!-- second person -->
-        <article data-index="1" data-status="inactive">
+        <article data-index="1" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
@@ -114,7 +114,7 @@
             </div>
         </article>
         <!-- third person -->
-        <article data-index="2" data-status="inactive">
+        <article data-index="2" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
@@ -137,7 +137,7 @@
             </div>
         </article>
         <!-- third person -->
-        <article data-index="3" data-status="inactive">
+        <article data-index="3" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
@@ -160,7 +160,7 @@
             </div>
         </article>
         <!-- four person -->
-        <article data-index="4" data-status="inactive">
+        <article data-index="4" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
